--- a/index.html
+++ b/index.html
@@ -7,6 +7,64 @@
     <title>Ease</title>
 </head>
 <body>
+
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">&#9776;</label>
+    <nav>
+      <div class="nav-links">
+        <a href="#header">Home</a>
+        <a href="#tim-vine">Tim Vine</a>
+        <a href="#bill-hicks">Bill Hicks</a>
+        <a href="#stewart-francis">Stewart Francis</a>
+      </div>
+    </nav>
+
+      <article>
+        <h2>Tim Vine</h2>
+        <p>I said to the gym instructor: ‘Can you teach me to do the splits?’ He said: ‘How flexible are you?’ I said: ‘I can’t make Tuesdays.'</p>
+        <p>I’ve decided to sell my Hoover – it was just collecting dust.</p>
+        <p>I saw Arnold Schwarzenegger eating a chocolate egg. I said: ‘I bet I know what your favourite Christian festival is.’ He said: ‘You have to love Easter, baby.'</p>
+        <p>I was reading a book – ‘The History of Glue’ – I couldn’t put it down.</p>
+      </article>
+    </section>
+    <section id="bill-hicks">
+      <article>
+        <h2>Bill Hicks</h2>
+        <p>I need my sleep. I need about eight hours a day, and about ten at night.</p>
+        <p>I don't mean to sound bitter, cold, or cruel, but I am, so that's how it comes out.</p>
+        <p>I never got along with my dad. Kids used to come up to me and say, "My dad can beat up your dad." I'd say "Yeah? When?"</p>
+      </article>
+      <article>
+        <h2>Tim Vine</h2>
+        <p>I said to the gym instructor: ‘Can you teach me to do the splits?’ He said: ‘How flexible are you?’ I said: ‘I can’t make Tuesdays.'</p>
+        <p>I’ve decided to sell my Hoover – it was just collecting dust.</p>
+        <p>I saw Arnold Schwarzenegger eating a chocolate egg. I said: ‘I bet I know what your favourite Christian festival is.’ He said: ‘You have to love Easter, baby.'</p>
+        <p>I was reading a book – ‘The History of Glue’ – I couldn’t put it down.</p>
+      </article>
+    </section>
+    <section id="bill-hicks">
+      <article>
+        <h2>Bill Hicks</h2>
+        <p>I need my sleep. I need about eight hours a day, and about ten at night.</p>
+        <p>I don't mean to sound bitter, cold, or cruel, but I am, so that's how it comes out.</p>
+        <p>I never got along with my dad. Kids used to come up to me and say, "My dad can beat up your dad." I'd say "Yeah? When?"</p>
+      </article>
+
+      <article>
+        <h2>Tim Vine</h2>
+        <p>I said to the gym instructor: ‘Can you teach me to do the splits?’ He said: ‘How flexible are you?’ I said: ‘I can’t make Tuesdays.'</p>
+        <p>I’ve decided to sell my Hoover – it was just collecting dust.</p>
+        <p>I saw Arnold Schwarzenegger eating a chocolate egg. I said: ‘I bet I know what your favourite Christian festival is.’ He said: ‘You have to love Easter, baby.'</p>
+        <p>I was reading a book – ‘The History of Glue’ – I couldn’t put it down.</p>
+      </article>
+    </section>
+    <section id="bill-hicks">
+      <article>
+        <h2>Bill Hicks</h2>
+        <p>I need my sleep. I need about eight hours a day, and about ten at night.</p>
+        <p>I don't mean to sound bitter, cold, or cruel, but I am, so that's how it comes out.</p>
+        <p>I never got along with my dad. Kids used to come up to me and say, "My dad can beat up your dad." I'd say "Yeah? When?"</p>
+      </article>
     <div class="card">
         hello welcome to Ease
     </div>
